[package]
name = "hmm-bc-cnv"
version = "0.1.0"
authors = ["wei.xu <wei.xu@10xgenomics.com>"]

[dependencies]
docopt = "*"
csv= "1.0.0-beta.5"
rust-htslib = "*"
ndarray = "*"
probability = "*"
itertools = "*"
statrs = "*"
serde = "*"
serde_derive = "*"
special = "0.7.7"
assert = "0.7.4"

[profile.release]
debug = true