[package]
name = "report_single_partition"
version = "0.1.0"
authors = ["wei.xu <wei.xu@10xgenomics.com>"]

[[bin]]
name = "report_single_partition"
path = "src/main.rs"

[dependencies]
rust-htslib = "*"
docopt = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
regex = "*"
csv = "1.0.0-beta.5"
itertools = ">=0.5.0"
bincode = "*"

[dev-dependencies]
tempfile = "*"

[profile.release]
debug = true
